--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -1,5 +1,27 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Evénements - {{ parent() }}
+{% endblock %}
+
 {% block body %}
-    Liste événements
+    <h1 class="my-6 text-2xl text-center">{{ incoming }} événement(s) à venir</h1>
+
+    <div class="max-w-3xl mx-auto my-8 divide-y divide-gray-100">
+        {% for event in events %}
+            <div class="px-4 py-6 cursor-pointer hover:bg-gray-50">
+                <div class="flex justify-between">
+                    <h2>{{ event.name }}</h2>
+
+                    {% if date(event.startAt) <= date() and date(event.endAt) >= date() %}
+                        <p class="bg-yellow-500 text-white px-3 py-1 rounded-lg text-sm">En cours</p>
+                    {% elseif date(event.endAt) < date() %}
+                        <p class="bg-red-500 text-white px-3 py-1 rounded-lg text-sm">Passé</p>
+                    {% else %}
+                        <p class="bg-emerald-500 text-white px-3 py-1 rounded-lg text-sm">Futur</p>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
