--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    Détail événement {{ id }}
+    <h1 class="my-6 text-2xl text-center font-semibold">{{ event.name }}</h1>
 {% endblock %}
