--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -9,18 +9,24 @@
 
     <div class="max-w-3xl mx-auto my-8 divide-y divide-gray-100">
         {% for event in events %}
-            <div class="px-4 py-6 cursor-pointer hover:bg-gray-50">
-                <a href="{{ path('app_event_show', { id: event.id }) }}">
+            <div class="cursor-pointer hover:bg-gray-50">
+                <a class="block px-4 py-6" href="{{ path('app_event_show', { id: event.id }) }}">
                     <div class="flex justify-between">
-                        <h2>{{ event.name }}</h2>
+                        <div>
+                            <h2>{{ event.name }}</h2>
+                        </div>
 
-                        {% if date(event.startAt) <= date() and date(event.endAt) >= date() %}
-                            <p class="bg-yellow-500 text-white px-3 py-1 rounded-lg text-sm">En cours</p>
-                        {% elseif date(event.endAt) < date() %}
-                            <p class="bg-red-500 text-white px-3 py-1 rounded-lg text-sm">Passé</p>
-                        {% else %}
-                            <p class="bg-emerald-500 text-white px-3 py-1 rounded-lg text-sm">Futur</p>
-                        {% endif %}
+                        <div>
+                            {% if date(event.startAt) <= date() and date(event.endAt) >= date() %}
+                                <p class="bg-yellow-500 text-white px-3 py-1 rounded-lg text-sm">En cours</p>
+                            {% elseif date(event.endAt) < date() %}
+                                <p class="bg-red-500 text-white px-3 py-1 rounded-lg text-sm">Passé</p>
+                            {% else %}
+                                <p class="bg-emerald-500 text-white px-3 py-1 rounded-lg text-sm">Futur</p>
+                            {% endif %}
+
+                            <p class="font-bold text-xl text-right">{{ event.price | number_format(2, ',') }} €</p>
+                        </div>
                     </div>
                 </a>
             </div>
