--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -6,5 +6,9 @@
         <div class="my-3">
             {{ event.description }}
         </div>
+
+        <div class="text-right my-6">
+            <a class="text-sm py-2 px-4 rounded-lg font-semibold bg-gray-900 text-white hover:bg-gray-800" href="{{ path('app_event_join', { id: event.id }) }}">Rejoindre l'événement</a>
+        </div>
     </div>
 {% endblock %}
