--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -11,6 +11,10 @@
         {% for event in events %}
             <div class="cursor-pointer hover:bg-gray-50">
                 <a class="block px-4 py-6" href="{{ path('app_event_show', { id: event.id }) }}">
+                    {% if event.poster %}
+                        <img src="{{ asset('uploads/events/' ~ event.poster) }}" alt="{{ event.name }}">
+                    {% endif %}
+
                     <div class="flex justify-between items-center">
                         <div>
                             <h2>{{ event.name }}</h2>
