--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -48,4 +48,16 @@
             </div>
         {% endfor %}
     </div>
+
+    {% if page > 1 %}
+        <a href="{{ path('app_event', { page: page - 1 }) }}">Page précédente</a>
+    {% endif %}
+
+    {% for i in 1..total %}
+        <a href="{{ path('app_event', { page: i }) }}">{{ i }}</a>
+    {% endfor %}
+
+    {% if page < total %}
+        <a href="{{ path('app_event', { page: page + 1 }) }}">Page suivante</a>
+    {% endif %}
 {% endblock %}
